--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": ">=5.6.0",
         "silverstripe/recipe-cms": "^4.2",
         "silverstripe/framework": "^4.2",
-        "silverstripe-themes/simple": "~3.2.0"
+        "silverstripe-themes/simple": "~3.2.0",
+        "twbs/bootstrap": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
@@ -34,6 +35,11 @@
     },
     "config": {
         "process-timeout": 600
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "cp -n vendor/twbs/bootstrap/dist/css/bootstrap-reboot.min.css public/css/bootstrap-reboot.min.css"
+        ]
     },
     "prefer-stable": true,
     "minimum-stability": "dev"
