Add blog and update homepage styles
Started adding a email subscribe form

--- a/mysite/_config/mysite.yml
+++ b/mysite/_config/mysite.yml
@@ -6,3 +6,6 @@ SilverStripe\Core\Manifest\ModuleManifest:
 Silverstripe\SiteConfig\SiteConfig:
   extensions:
     - TinySiteConfig
+Page:
+  extensions:
+    - SilverStripe\Widgets\Extensions\WidgetPageExtension
