--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
         "silverstripe/recipe-cms": "^4.2",
         "silverstripe/framework": "^4.2",
         "silverstripe-themes/simple": "~3.2.0",
-        "twbs/bootstrap": "^4.1"
+        "twbs/bootstrap": "^4.1",
+        "silverstripe/blog": "^3.2",
+        "silverstripe/widgets": "^2.0",
+        "drewm/mailchimp-api": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
