Update content, add email sign up, add wikipage

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ SS_DATABASE_SERVER="localhost"
 SS_DATABASE_USERNAME="<user>"
 SS_DATABASE_PASSWORD="<password>"
 SS_DATABASE_NAME="<database>"
+
+# SS_SEND_ALL_EMAILS_TO=""
+
+# SS_DEFAULT_ADMIN_USERNAME=""
+# SS_DEFAULT_ADMIN_PASSWORD=""
