Update homepage boxes to be editable in CMS

--- a/mysite/_config/mysite.yml
+++ b/mysite/_config/mysite.yml
@@ -9,3 +9,6 @@ Silverstripe\SiteConfig\SiteConfig:
 Page:
   extensions:
     - SilverStripe\Widgets\Extensions\WidgetPageExtension
+SilverStripe\Security\MemberAuthenticator\MemberLoginForm:
+  default_classes:
+    - 'security'
