--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "silverstripe-themes/simple": "~3.2.0",
         "twbs/bootstrap": "^4.1",
         "silverstripe/blog": "^3.2",
-        "silverstripe/widgets": "^2.0"
+        "silverstripe/widgets": "^2.0",
+        "undefinedoffset/sortablegridfield": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
