--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ version: '3'
 services:
   web:
     image: msdeploybot/silverstripe-web
-    working_dir: /var/www/public
+    working_dir: /var/www
     volumes:
-      - ./:/var/www/public
+      - ./:/var/www
     ports:
       - 80:80
     environment:
