Add captcha to contact, add link to registration

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,12 @@ SS_DATABASE_USERNAME="<user>"
 SS_DATABASE_PASSWORD="<password>"
 SS_DATABASE_NAME="<database>"
 
+MAILCHIMP_API_KEY=""
+MAILCHIMP_MAIN_LIST_ID=""
+
 # SS_SEND_ALL_EMAILS_TO=""
 
 # SS_DEFAULT_ADMIN_USERNAME=""
 # SS_DEFAULT_ADMIN_PASSWORD=""
+
+GOOGLE_RECAPTCHA_SECRET=""
