--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "twbs/bootstrap": "^4.1",
         "silverstripe/blog": "^3.2",
         "silverstripe/widgets": "^2.0",
-        "undefinedoffset/sortablegridfield": "^2.0"
+        "undefinedoffset/sortablegridfield": "^2.0",
+        "google/recaptcha": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
