--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,13 @@
 # AuthUserFile "/var/www/.htpasswd"
 # Require valid-user
 
+<IfModule mod_php7.c>
+  php_value max_execution_time 300
+  php_value upload_max_filesize 100M
+  php_value post_max_size 100M
+  php_value memory_limit 258M
+</IfModule>
+
 ### SILVERSTRIPE START ###
 
 # Deny access to templates (but allow from localhost)
